# ising-partition-approx

./: README.md  pyproject.toml
ising/: model.py  vi.py
ising/warmup/: vi.py
test/: test_ising.py  test_warmup.py
